--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,7 +178,7 @@ body {
   background: var(--body-bg-color);
   color: var(--text-color);
   font-family: 'Noto Serif SC', "PingFang SC", "Microsoft YaHei", sans-serif;
-  font-size: 1em;
+  font-size: 0.97em;
   line-height: 2;
 }
 @media (max-width: 991px) {
@@ -199,22 +199,22 @@ h6 {
   margin: 20px 0 15px;
 }
 h1 {
-  font-size: 0.75em;
+  font-size: 1.4em;
 }
 h2 {
-  font-size: 0.625em;
+  font-size: 1.275em;
 }
 h3 {
-  font-size: 0.5em;
+  font-size: 1.15em;
 }
 h4 {
-  font-size: 0.375em;
+  font-size: 1.025em;
 }
 h5 {
-  font-size: 0.25em;
+  font-size: 0.9em;
 }
 h6 {
-  font-size: 0.125em;
+  font-size: 0.775em;
 }
 p {
   margin: 0 0 20px 0;
@@ -1284,7 +1284,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #16c7ff;
+  background: #3c14de;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
