--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1284,7 +1284,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #1fa3dd;
+  background: #739c65;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
